--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,6 +4,7 @@
 {% block content %}
 <div class="container">
     <div class="login">
+        <div class="row">
             <div class="mx-auto">
                 <div class="card">
                     <div class="card-header bd-primary text-black">
@@ -20,6 +21,7 @@
                 </div>
                 <br>
                 <a href="{% url 'signup' %}">Create an account</a></p>
+            </div>
             </div>
         </div>
     </div>
